tests/transpiler/x/hs/string_index.hs
-- Generated by Mochi transpiler v0.10.31 on 2025-07-19 21:29:09 GMT+7
import Data.List (isInfixOf, union, intersect, (\\))
s = "mochi"

main :: IO ()
main = do
    putStrLn (unwords (map show (s !! 1)))
